--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2021.5.30
 charset-normalizer==2.0.4
 cssselect==1.1.0
 fake-useragent==0.1.11
+feedparser==6.0.8
 idna==3.2
 importlib-metadata==4.8.1
 lxml==4.6.3
@@ -16,6 +17,7 @@ pytz==2021.1
 requests==2.26.0
 requests-html==0.10.0
 selenium==3.141.0
+sgmllib3k==1.0.0
 six==1.16.0
 soupsieve==2.2.1
 tqdm==4.62.2
