--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ parse==1.19.0
 pyee==8.2.2
 pyppeteer==0.2.6
 pyquery==1.4.3
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
 requests-html==0.10.0
