--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,17 +24,17 @@ jobs:
                   git clone https://github.com/0Chencc/SakurajimaMai $selfhosted_home/SakurajimaMai
                 fi
             - uses: actions/checkout@v2
-#            - name: Set up Python ${{ matrix.python-version }}
-#              uses: actions/setup-python@v2
-#              with:
-#                python-version: ${{ matrix.python-version }}
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v2
+              with:
+                python-version: ${{ matrix.python-version }}
             - name: Install dependencies
               run: |
                   python3.9 -m pip install --upgrade pip
                   if [ -f requirements.txt ]; then python3.9 -m pip install -r requirements.txt ; fi
             - name: 'SakurajimaMai'
               run: |
-                  python3.9 ./main.py
+                  python3.9 main.py
               env:
                   BREAKFAST: ${{ secrets.BREAKFAST }}
                   LUNCH: ${{ secrets.LUNCH }}
