猜测由于包结构的问题导致某些功能失效
猜测由于包结构的问题导致某些功能失效

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
                   if [ -f requirements.txt ]; then python3.9 -m pip install -r requirements.txt ; fi
             - name: 'SakurajimaMai'
               run: |
-                  python3.9 main.py
+                  python3.9 ./src/main.py
               env:
                   BREAKFAST: ${{ secrets.BREAKFAST }}
                   LUNCH: ${{ secrets.LUNCH }}
